--- a/webSocket.ioc
+++ b/webSocket.ioc
@@ -1,7 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE
+FREERTOS.Tasks01=defaultTask,0,1024,StartDefaultTask,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=60360
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -16,15 +20,16 @@ Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PH0/OSC_IN
 Mcu.Pin1=PH1/OSC_OUT
-Mcu.Pin2=PA5
-Mcu.Pin3=PA6
-Mcu.Pin4=PA7
-Mcu.Pin5=PC4
-Mcu.Pin6=PC5
-Mcu.Pin7=PB0
-Mcu.Pin8=PG13
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V1
-Mcu.PinsNb=10
+Mcu.Pin10=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin2=PA0/WKUP
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PC4
+Mcu.Pin7=PC5
+Mcu.Pin8=PB0
+Mcu.Pin9=PG13
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -32,6 +37,8 @@ MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -44,6 +51,10 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0/WKUP.GPIOParameters=GPIO_Label
+PA0/WKUP.GPIO_Label=BUTTON
+PA0/WKUP.Locked=true
+PA0/WKUP.Signal=GPXTI0
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -58,10 +69,11 @@ PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=SPI1_CS
 PC4.Locked=true
 PC4.Signal=GPIO_Output
-PC5.GPIOParameters=GPIO_Label
+PC5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC5.GPIO_Label=INT
+PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC5.Locked=true
-PC5.Signal=GPIO_Input
+PC5.Signal=GPXTI5
 PG13.GPIOParameters=GPIO_Label
 PG13.GPIO_Label=LED
 PG13.Locked=true
@@ -93,6 +105,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=webSocket.ioc
 ProjectManager.ProjectName=webSocket
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -139,6 +152,10 @@ RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VCOSAIOutputFreq_ValueR=49000000
 RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=22.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -148,4 +165,5 @@ SPI1.VirtualType=VM_MASTER
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 board=custom
+rtos.0.ip=FREERTOS
 isbadioc=false
