--- a/webSocket.ioc
+++ b/webSocket.ioc
@@ -12,24 +12,30 @@ KeepUserPlacement=false
 Mcu.CPN=STM32H743VIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IPNb=5
+Mcu.IP1=DEBUG
+Mcu.IP2=DFSDM1
+Mcu.IP3=FREERTOS
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IPNb=7
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN (PH0)
 Mcu.Pin1=PH1-OSC_OUT (PH1)
-Mcu.Pin2=PA1
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PC5
-Mcu.Pin8=PB0
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V1
-Mcu.PinsNb=10
+Mcu.Pin10=PB0
+Mcu.Pin11=PA13 (JTMS/SWDIO)
+Mcu.Pin12=PA14 (JTCK/SWCLK)
+Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin2=PC0
+Mcu.Pin3=PC1
+Mcu.Pin4=PA1
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PC4
+Mcu.Pin9=PC5
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -56,6 +62,10 @@ PA1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA1.GPIO_PuPd=GPIO_NOPULL
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA13\ (JTMS/SWDIO).Mode=Serial_Wire
+PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
+PA14\ (JTCK/SWCLK).Mode=Serial_Wire
+PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -66,6 +76,8 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=RST
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PC0.Signal=S_CKIN0DFSDM1
+PC1.Signal=S_DATAIN0DFSDM1
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=SPI1_CS
 PC4.Locked=true
@@ -196,7 +208,7 @@ RCC.SYSCLKFreq_VALUE=240000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.Tim1OutputFreq_Value=120000000
 RCC.Tim2OutputFreq_Value=120000000
-RCC.TraceFreq_Value=16000000
+RCC.TraceFreq_Value=240000000
 RCC.USART16Freq_Value=120000000
 RCC.USART234578Freq_Value=120000000
 RCC.USBFreq_Value=120000000
@@ -216,6 +228,10 @@ RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
+SH.S_CKIN0DFSDM1.0=DFSDM1_CKIN0,PDM_SPI_input_from_ch0_and_external_clock
+SH.S_CKIN0DFSDM1.ConfNb=1
+SH.S_DATAIN0DFSDM1.0=DFSDM1_DATIN0,PDM_SPI_input_from_ch0_and_external_clock
+SH.S_DATAIN0DFSDM1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=60.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
