--- a/webSocket.ioc
+++ b/webSocket.ioc
@@ -2,40 +2,71 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=SPI2_RX
+Dma.RequestsNb=1
+Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.0.Instance=DMA1_Stream3
+Dma.SPI2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.0.Mode=DMA_NORMAL
+Dma.SPI2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,0,1024,StartDefaultTask,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=60360
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2S2.AudioFreq=I2S_AUDIOFREQ_32K
+I2S2.ErrorAudioFreq=0.0 %
+I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Mode,Standard,AudioFreq
+I2S2.Instance=SPI$Index
+I2S2.Mode=I2S_MODE_MASTER_RX
+I2S2.RealAudioFreq=32.0 KHz
+I2S2.Standard=I2S_STANDARD_MSB
+I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F429ZIT6
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IPNb=4
+Mcu.IP0=CRC
+Mcu.IP1=DMA
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2S2
+Mcu.IP4=NVIC
+Mcu.IP5=PDM2PCM
+Mcu.IP6=RCC
+Mcu.IP7=SPI1
+Mcu.IPNb=8
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PH0/OSC_IN
 Mcu.Pin1=PH1/OSC_OUT
-Mcu.Pin10=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin2=PA0/WKUP
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PC5
-Mcu.Pin8=PB0
-Mcu.Pin9=PG13
-Mcu.PinsNb=11
+Mcu.Pin10=PB10
+Mcu.Pin11=PB12
+Mcu.Pin12=PG13
+Mcu.Pin13=VP_CRC_VS_CRC
+Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin15=VP_PDM2PCM_VS_PDM2PCM
+Mcu.Pin2=PC3
+Mcu.Pin3=PA0/WKUP
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PC4
+Mcu.Pin8=PC5
+Mcu.Pin9=PB0
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
@@ -65,6 +96,12 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=RST
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB10.Mode=Half_Duplex_Master
+PB10.Signal=I2S2_CK
+PB12.Mode=Half_Duplex_Master
+PB12.Signal=I2S2_WS
+PC3.Mode=Half_Duplex_Master
+PC3.Signal=I2S2_SD
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=SPI1_CS
 PC4.Locked=true
@@ -111,7 +148,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_I2S2_Init-I2S2-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -127,13 +164,14 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=180000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.I2SClocksFreq_Value=128000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SR,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 RCC.LCDTFTFreq_Value=24500000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=180000000
 RCC.PLLCLKFreq_Value=180000000
+RCC.PLLI2SR=3
 RCC.PLLM=4
 RCC.PLLN=180
 RCC.PLLQCLKFreq_Value=90000000
@@ -150,7 +188,7 @@ RCC.VCOOutputFreq_Value=360000000
 RCC.VCOSAIOutputFreq_Value=98000000
 RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VCOSAIOutputFreq_ValueR=49000000
-RCC.VcooutputI2S=192000000
+RCC.VcooutputI2S=128000000
 RCC.VcooutputI2SQ=192000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
@@ -162,8 +200,12 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_PDM2PCM_VS_PDM2PCM.Mode=PDM2PCM_Channel
+VP_PDM2PCM_VS_PDM2PCM.Signal=PDM2PCM_VS_PDM2PCM
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
