--- a/webSocketMigrate.ioc
+++ b/webSocketMigrate.ioc
@@ -8,8 +8,9 @@ CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
 CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,USART3,DEBUG,USB_DEVICE_M4\:I,USB_HOST_M4\:I,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO
 CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,SPI1\:I
 CortexM7.Pins=PD14,PD15,PG9,PE1
-FREERTOS_M7.IPParameters=Tasks01
-FREERTOS_M7.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS_M7.FootprintOK=true
+FREERTOS_M7.IPParameters=Tasks01,FootprintOK
+FREERTOS_M7.Tasks01=defaultTask,0,1024,StartDefaultTask,As weak,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -53,7 +54,7 @@ MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC1.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC1.EXTI9_5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -117,8 +118,9 @@ PE1.Locked=true
 PE1.PinAttribute=CortexM7
 PE1.Signal=GPIO_Output
 PG9.ContextOwner=CortexM7
-PG9.GPIOParameters=GPIO_Label,PinAttribute
+PG9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI,PinAttribute
 PG9.GPIO_Label=INT
+PG9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PG9.Locked=true
 PG9.PinAttribute=CortexM7
 PG9.Signal=GPXTI9
