--- a/webSocket.ioc
+++ b/webSocket.ioc
@@ -3,8 +3,38 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,USART3,DEBUG,USB_DEVICE_M4\:I,USB_HOST_M4\:I,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO
-CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,SPI1\:I
+CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,SPI1\:I,DFSDM1\:I
 CortexM7.Pins=PD14,PD15,PG9,PE1
+DFSDM1.Divider=25
+DFSDM1.DmaMode_reg_FIL0=ENABLE
+DFSDM1.FastMode_reg_FIL0=ENABLE
+DFSDM1.Filter_regChannel_FIL0=DFSDM_CHANNEL_0
+DFSDM1.Fosr_FIL0=64
+DFSDM1.IPParameters=RightBitShift_CH0,Oversampling_CH0,Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,Divider,Selection,SincOrder_FIL0
+DFSDM1.Oversampling_CH0=1
+DFSDM1.RightBitShift_CH0=0x05
+DFSDM1.Selection=DFSDM_CHANNEL_OUTPUT_CLOCK_AUDIO
+DFSDM1.SincOrder_FIL0=DFSDM_FILTER_SINC4_ORDER
+Dma.DFSDM1_FLT0.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DFSDM1_FLT0.0.EventEnable=DISABLE
+Dma.DFSDM1_FLT0.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.DFSDM1_FLT0.0.Instance=DMA1_Stream0
+Dma.DFSDM1_FLT0.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DFSDM1_FLT0.0.MemInc=DMA_MINC_ENABLE
+Dma.DFSDM1_FLT0.0.Mode=DMA_CIRCULAR
+Dma.DFSDM1_FLT0.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DFSDM1_FLT0.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DFSDM1_FLT0.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.DFSDM1_FLT0.0.Priority=DMA_PRIORITY_LOW
+Dma.DFSDM1_FLT0.0.RequestNumber=1
+Dma.DFSDM1_FLT0.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.DFSDM1_FLT0.0.SignalID=NONE
+Dma.DFSDM1_FLT0.0.SyncEnable=DISABLE
+Dma.DFSDM1_FLT0.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.DFSDM1_FLT0.0.SyncRequestNumber=1
+Dma.DFSDM1_FLT0.0.SyncSignalID=NONE
+Dma.Request0=DFSDM1_FLT0
+Dma.RequestsNb=1
 FREERTOS_M7.FootprintOK=true
 FREERTOS_M7.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK
 FREERTOS_M7.Tasks01=defaultTask,0,1024,StartDefaultTask,As weak,NULL,Dynamic,NULL,NULL
@@ -19,43 +49,48 @@ Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M4
 Mcu.IP1=CORTEX_M7
-Mcu.IP2=FREERTOS_M7
-Mcu.IP3=NVIC1
-Mcu.IP4=NVIC2
-Mcu.IP5=RCC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=SYS_M4
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP10=SYS_M4
+Mcu.IP11=USART3
+Mcu.IP2=DFSDM1
+Mcu.IP3=DMA
+Mcu.IP4=FREERTOS_M7
+Mcu.IP5=NVIC1
+Mcu.IP6=NVIC2
+Mcu.IP7=RCC
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=12
 Mcu.Name=STM32H745ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin10=PD9
-Mcu.Pin11=PD14
-Mcu.Pin12=PD15
-Mcu.Pin13=PG9
-Mcu.Pin14=PB5
-Mcu.Pin15=PE1
-Mcu.Pin16=VP_FREERTOS_M7_VS_CMSIS_V1
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_SYS_M4_VS_Systick
+Mcu.Pin10=PB14
+Mcu.Pin11=PD8
+Mcu.Pin12=PD9
+Mcu.Pin13=PD14
+Mcu.Pin14=PD15
+Mcu.Pin15=PG9
+Mcu.Pin16=PB5
+Mcu.Pin17=PE1
+Mcu.Pin18=VP_FREERTOS_M7_VS_CMSIS_V1
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin20=VP_SYS_M4_VS_Systick
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PB0
-Mcu.Pin8=PB14
-Mcu.Pin9=PD8
-Mcu.PinsNb=19
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2_C
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PB0
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745ZITx
 MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC1.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC1.EXTI9_5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC1.ForceEnableDMAVector=true
@@ -104,6 +139,9 @@ PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.PinAttribute=CortexM7
 PB5.Signal=SPI1_MOSI
+PC1.GPIOParameters=PinAttribute
+PC1.PinAttribute=CortexM7
+PC1.Signal=S_DATAIN0DFSDM1
 PC13.GPIOParameters=GPIO_Label,PinAttribute
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.Locked=true
@@ -119,6 +157,9 @@ PC15-OSC32_OUT\ (OSC32_OUT).Locked=true
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).PinAttribute=CortexM7
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
+PC2_C.GPIOParameters=PinAttribute
+PC2_C.PinAttribute=CortexM7
+PC2_C.Signal=S_CKOUTDFSDM1
 PD14.ContextOwner=CortexM7
 PD14.GPIOParameters=GPIO_Label,PinAttribute
 PD14.GPIO_Label=SPI1_CS
@@ -196,8 +237,8 @@ ProjectManager.StackSize=M4-0x400,M7-0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,4-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,5-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,1-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
-RCC.ADCFreq_Value=90000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,5-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,6-MX_DFSDM1_Init-DFSDM1-false-HAL-true-CortexM7,7-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+RCC.ADCFreq_Value=25000000
 RCC.AHB12Freq_Value=120000000
 RCC.AHB4Freq_Value=120000000
 RCC.APB1Freq_Value=120000000
@@ -212,25 +253,25 @@ RCC.CPU2SystikFreq_Value=120000000
 RCC.CortexFreq_Value=240000000
 RCC.CpuClockFreq_Value=240000000
 RCC.D1CPREFreq_Value=240000000
-RCC.DFSDMACLkFreq_Value=480000000
+RCC.DFSDMACLkFreq_Value=25000000
 RCC.DFSDMFreq_Value=120000000
 RCC.DIVM1=1
 RCC.DIVM2=2
 RCC.DIVM3=1
 RCC.DIVN1=120
-RCC.DIVN2=180
+RCC.DIVN2=50
 RCC.DIVN3=18
 RCC.DIVP1=4
 RCC.DIVP1Freq_Value=240000000
 RCC.DIVP2=8
-RCC.DIVP2Freq_Value=90000000
+RCC.DIVP2Freq_Value=25000000
 RCC.DIVP3Freq_Value=75000000
 RCC.DIVQ1Freq_Value=480000000
-RCC.DIVQ2Freq_Value=360000000
+RCC.DIVQ2Freq_Value=100000000
 RCC.DIVQ3=3
 RCC.DIVQ3Freq_Value=50000000
 RCC.DIVR1Freq_Value=480000000
-RCC.DIVR2Freq_Value=360000000
+RCC.DIVR2Freq_Value=100000000
 RCC.DIVR3Freq_Value=75000000
 RCC.FDCANFreq_Value=480000000
 RCC.FMCFreq_Value=120000000
@@ -242,7 +283,7 @@ RCC.HRTIMFreq_Value=120000000
 RCC.HSE_VALUE=8000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578CLockSelection,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1CLockSelection,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578CLockSelection,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
@@ -257,14 +298,15 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=120000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=480000000
+RCC.SAI1CLockSelection=RCC_SAI1CLKSOURCE_PLL2
+RCC.SAI1Freq_Value=25000000
 RCC.SAI23Freq_Value=480000000
 RCC.SAI4AFreq_Value=480000000
 RCC.SAI4BFreq_Value=480000000
 RCC.SDMMCFreq_Value=480000000
 RCC.SPDIFRXFreq_Value=480000000
 RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL2
-RCC.SPI123Freq_Value=90000000
+RCC.SPI123Freq_Value=25000000
 RCC.SPI45Freq_Value=120000000
 RCC.SPI6Freq_Value=120000000
 RCC.SWPMI1Freq_Value=120000000
@@ -280,15 +322,20 @@ RCC.USART234578Freq_Value=50000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_PLL3
 RCC.USBFreq_Value=50000000
 RCC.VCO1OutputFreq_Value=960000000
-RCC.VCO2OutputFreq_Value=720000000
+RCC.VCO2OutputFreq_Value=200000000
 RCC.VCO3OutputFreq_Value=150000000
 RCC.VCOInput1Freq_Value=8000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=8000000
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
+SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT,PDM_SPI_input_from_ch0_and_internal_clock
+SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,CKOUT
+SH.S_CKOUTDFSDM1.ConfNb=2
+SH.S_DATAIN0DFSDM1.0=DFSDM1_DATIN0,PDM_SPI_input_from_ch0_and_internal_clock
+SH.S_DATAIN0DFSDM1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=22.5 MBits/s
+SPI1.CalculateBaudRate=6.25 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
