clean up project

--- a/webSocket.ioc
+++ b/webSocket.ioc
@@ -8,13 +8,12 @@ CortexM7.Pins=PD14,PD15,PG9,PE1
 DFSDM1.Divider=110
 DFSDM1.DmaMode_reg_FIL0=ENABLE
 DFSDM1.FastMode_reg_FIL0=ENABLE
-DFSDM1.Filter_regChannel_FIL0=DFSDM_CHANNEL_0
+DFSDM1.Filter_regChannel_FIL0=DFSDM_CHANNEL_2
 DFSDM1.Fosr_FIL0=125
-DFSDM1.IPParameters=RightBitShift_CH0,Oversampling_CH0,Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,Divider,Selection,SincOrder_FIL0
-DFSDM1.Oversampling_CH0=1
-DFSDM1.RightBitShift_CH0=0x00
+DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,SincOrder_FIL0,Divider,Selection,Type_spi_CH2
 DFSDM1.Selection=DFSDM_CHANNEL_OUTPUT_CLOCK_AUDIO
 DFSDM1.SincOrder_FIL0=DFSDM_FILTER_SINC3_ORDER
+DFSDM1.Type_spi_CH2=DFSDM_CHANNEL_SPI_RISING
 Dma.DFSDM1_FLT0.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.DFSDM1_FLT0.0.EventEnable=DISABLE
 Dma.DFSDM1_FLT0.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -78,11 +77,11 @@ Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin20=VP_SYS_M4_VS_Systick
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin5=PC1
-Mcu.Pin6=PC2_C
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PB0
+Mcu.Pin5=PC2_C
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PB0
+Mcu.Pin9=PE7
 Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -139,9 +138,6 @@ PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.PinAttribute=CortexM7
 PB5.Signal=SPI1_MOSI
-PC1.GPIOParameters=PinAttribute
-PC1.PinAttribute=CortexM7
-PC1.Signal=S_DATAIN0DFSDM1
 PC13.GPIOParameters=GPIO_Label,PinAttribute
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.Locked=true
@@ -190,6 +186,10 @@ PE1.GPIO_Label=LED
 PE1.Locked=true
 PE1.PinAttribute=CortexM7
 PE1.Signal=GPIO_Output
+PE7.GPIOParameters=PinAttribute
+PE7.Locked=true
+PE7.PinAttribute=CortexM7
+PE7.Signal=S_DATAIN2DFSDM1
 PG9.ContextOwner=CortexM7
 PG9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI,PinAttribute
 PG9.GPIO_Label=INT
@@ -237,7 +237,7 @@ ProjectManager.StackSize=M4-0x400,M7-0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,5-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,6-MX_DFSDM1_Init-DFSDM1-false-HAL-true-CortexM7,7-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,5-MX_DFSDM1_Init-DFSDM1-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=110000000
 RCC.AHB12Freq_Value=120000000
 RCC.AHB4Freq_Value=120000000
@@ -329,11 +329,11 @@ RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=8000000
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT,PDM_SPI_input_from_ch0_and_internal_clock
+SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT,PDM_SPI_input_from_ch2_and_internal_clock
 SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,CKOUT
 SH.S_CKOUTDFSDM1.ConfNb=2
-SH.S_DATAIN0DFSDM1.0=DFSDM1_DATIN0,PDM_SPI_input_from_ch0_and_internal_clock
-SH.S_DATAIN0DFSDM1.ConfNb=1
+SH.S_DATAIN2DFSDM1.0=DFSDM1_DATIN2,PDM_SPI_input_from_ch2_and_internal_clock
+SH.S_DATAIN2DFSDM1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=27.5 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
