--- a/webSocket.ioc
+++ b/webSocket.ioc
@@ -3,7 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,USART3,DEBUG,USB_DEVICE_M4\:I,USB_HOST_M4\:I,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO
-CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,DFSDM1\:I,SPI2\:I
+CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,DFSDM1\:I,SPI2\:I,SPI1\:I
 CortexM7.Pins=PE3,PC13,PF7,PF8,PF9,PB0,PE8,PB14,PD12,PD13,PE1
 DFSDM1.Divider=110
 DFSDM1.DmaMode_reg_FIL0=ENABLE
@@ -14,6 +14,7 @@ DFSDM1.FastMode_reg_FIL0=ENABLE
 DFSDM1.FastMode_reg_FIL1=ENABLE
 DFSDM1.FastMode_reg_FIL2=ENABLE
 DFSDM1.FastMode_reg_FIL3=ENABLE
+DFSDM1.FilterOrder_CH5=DFSDM_CHANNEL_FASTSINC_ORDER
 DFSDM1.Filter_regChannel_FIL0=DFSDM_CHANNEL_2
 DFSDM1.Filter_regChannel_FIL1=DFSDM_CHANNEL_3
 DFSDM1.Filter_regChannel_FIL2=DFSDM_CHANNEL_4
@@ -23,7 +24,7 @@ DFSDM1.Fosr_FIL0=125
 DFSDM1.Fosr_FIL1=125
 DFSDM1.Fosr_FIL2=125
 DFSDM1.Fosr_FIL3=125
-DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,SincOrder_FIL0,Divider,Selection,Type_spi_CH2,Filter_regContinuousMode_FIL0,Filter_regChannel_FIL1,Trigger_reg_FIL1,Filter_regChannel_FIL2,Trigger_reg_FIL2,Filter_regChannel_FIL3,Trigger_reg_FIL3,Type_spi_CH5,FastMode_reg_FIL1,DmaMode_reg_FIL1,FastMode_reg_FIL2,DmaMode_reg_FIL2,FastMode_reg_FIL3,DmaMode_reg_FIL3,SincOrder_FIL1,Fosr_FIL1,SincOrder_FIL2,Fosr_FIL2,SincOrder_FIL3,Fosr_FIL3
+DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,SincOrder_FIL0,Divider,Selection,Type_spi_CH2,Filter_regContinuousMode_FIL0,Filter_regChannel_FIL1,Trigger_reg_FIL1,Filter_regChannel_FIL2,Trigger_reg_FIL2,Filter_regChannel_FIL3,Trigger_reg_FIL3,Type_spi_CH5,FastMode_reg_FIL1,DmaMode_reg_FIL1,FastMode_reg_FIL2,DmaMode_reg_FIL2,FastMode_reg_FIL3,DmaMode_reg_FIL3,SincOrder_FIL1,Fosr_FIL1,SincOrder_FIL2,Fosr_FIL2,SincOrder_FIL3,Fosr_FIL3,FilterOrder_CH5
 DFSDM1.Selection=DFSDM_CHANNEL_OUTPUT_CLOCK_AUDIO
 DFSDM1.SincOrder_FIL0=DFSDM_FILTER_SINC3_ORDER
 DFSDM1.SincOrder_FIL1=DFSDM_FILTER_SINC3_ORDER
@@ -125,26 +126,27 @@ Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M4
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=SYS_M4
-Mcu.IP11=USART3
+Mcu.IP10=SYS
+Mcu.IP11=SYS_M4
+Mcu.IP12=USART3
 Mcu.IP2=DFSDM1
 Mcu.IP3=DMA
 Mcu.IP4=FREERTOS_M7
 Mcu.IP5=NVIC1
 Mcu.IP6=NVIC2
 Mcu.IP7=RCC
-Mcu.IP8=SPI2
-Mcu.IP9=SYS
-Mcu.IPNb=12
+Mcu.IP8=SPI1
+Mcu.IP9=SPI2
+Mcu.IPNb=13
 Mcu.Name=STM32H745ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PC0
-Mcu.Pin11=PC2_C
-Mcu.Pin12=PC3_C
-Mcu.Pin13=PB0
-Mcu.Pin14=PE7
+Mcu.Pin10=PC2_C
+Mcu.Pin11=PC3_C
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PB0
 Mcu.Pin15=PE8
 Mcu.Pin16=PE9
 Mcu.Pin17=PE12
@@ -155,10 +157,11 @@ Mcu.Pin20=PD8
 Mcu.Pin21=PD9
 Mcu.Pin22=PD12
 Mcu.Pin23=PD13
-Mcu.Pin24=PE1
-Mcu.Pin25=VP_FREERTOS_M7_VS_CMSIS_V1
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_SYS_M4_VS_Systick
+Mcu.Pin24=PB5
+Mcu.Pin25=PE1
+Mcu.Pin26=VP_FREERTOS_M7_VS_CMSIS_V1
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_SYS_M4_VS_Systick
 Mcu.Pin3=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin4=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin5=PF7
@@ -166,7 +169,7 @@ Mcu.Pin6=PF8
 Mcu.Pin7=PF9
 Mcu.Pin8=PH0-OSC_IN (PH0)
 Mcu.Pin9=PH1-OSC_OUT (PH1)
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745ZITx
@@ -202,6 +205,14 @@ NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA5.GPIOParameters=PinAttribute
+PA5.Mode=Full_Duplex_Master
+PA5.PinAttribute=CortexM7
+PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=PinAttribute
+PA6.Mode=Full_Duplex_Master
+PA6.PinAttribute=CortexM7
+PA6.Signal=SPI1_MISO
 PB0.ContextOwner=CortexM7
 PB0.GPIOParameters=GPIO_Label,PinAttribute
 PB0.GPIO_Label=LED1
@@ -218,9 +229,11 @@ PB14.GPIO_Label=LED3
 PB14.Locked=true
 PB14.PinAttribute=CortexM7
 PB14.Signal=GPIO_Output
-PC0.GPIOParameters=PinAttribute
-PC0.PinAttribute=CortexM7
-PC0.Signal=S_DATAIN4DFSDM1
+PB5.GPIOParameters=PinAttribute
+PB5.Locked=true
+PB5.Mode=Full_Duplex_Master
+PB5.PinAttribute=CortexM7
+PB5.Signal=SPI1_MOSI
 PC13.ContextOwner=CortexM7
 PC13.GPIOParameters=GPIO_Label,PinAttribute
 PC13.GPIO_Label=B1 [Blue PushButton]
@@ -289,10 +302,6 @@ PE3.Signal=GPIO_Output
 PE4.GPIOParameters=PinAttribute
 PE4.PinAttribute=CortexM7
 PE4.Signal=S_DATAIN3DFSDM1
-PE7.GPIOParameters=PinAttribute
-PE7.Locked=true
-PE7.PinAttribute=CortexM7
-PE7.Signal=S_DATAIN2DFSDM1
 PE8.ContextOwner=CortexM7
 PE8.GPIOParameters=GPIO_Label,PinAttribute
 PE8.GPIO_Label=SPI_CS
@@ -360,7 +369,7 @@ ProjectManager.StackSize=M4-0x400,M7-0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,5-MX_DFSDM1_Init-DFSDM1-false-HAL-true-CortexM7,6-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,7-MX_SPI2_Init-SPI2-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,5-MX_DFSDM1_Init-DFSDM1-false-HAL-true-CortexM7,6-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,7-MX_SPI2_Init-SPI2-false-HAL-true-CortexM7,8-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=110000000
 RCC.AHB12Freq_Value=120000000
 RCC.AHB4Freq_Value=120000000
@@ -453,19 +462,24 @@ RCC.VCOInput3Freq_Value=8000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT,CKOUT
-SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,PDM_SPI_input_from_ch2_and_internal_clock
-SH.S_CKOUTDFSDM1.2=DFSDM1_CKOUT,PDM_SPI_input_from_ch3_and_internal_clock
-SH.S_CKOUTDFSDM1.3=DFSDM1_CKOUT,PDM_SPI_input_from_ch4_and_internal_clock
-SH.S_CKOUTDFSDM1.4=DFSDM1_CKOUT,PDM_SPI_input_from_ch5_and_internal_clock
+SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,PDM_SPI_input_from_ch3_and_internal_clock
+SH.S_CKOUTDFSDM1.2=DFSDM1_CKOUT,PDM_SPI_input_from_ch5_and_internal_clock
+SH.S_CKOUTDFSDM1.3=DFSDM1_CKOUT,PDM_SPI_Input_from_ch23_and_Internal_Clock
+SH.S_CKOUTDFSDM1.4=DFSDM1_CKOUT,PDM_SPI_Input_from_ch45_and_Internal_Clock
 SH.S_CKOUTDFSDM1.ConfNb=5
-SH.S_DATAIN2DFSDM1.0=DFSDM1_DATIN2,PDM_SPI_input_from_ch2_and_internal_clock
-SH.S_DATAIN2DFSDM1.ConfNb=1
 SH.S_DATAIN3DFSDM1.0=DFSDM1_DATIN3,PDM_SPI_input_from_ch3_and_internal_clock
-SH.S_DATAIN3DFSDM1.ConfNb=1
-SH.S_DATAIN4DFSDM1.0=DFSDM1_DATIN4,PDM_SPI_input_from_ch4_and_internal_clock
-SH.S_DATAIN4DFSDM1.ConfNb=1
+SH.S_DATAIN3DFSDM1.1=DFSDM1_DATIN3,PDM_SPI_Input_from_ch23_and_Internal_Clock
+SH.S_DATAIN3DFSDM1.ConfNb=2
 SH.S_DATAIN5DFSDM1.0=DFSDM1_DATIN5,PDM_SPI_input_from_ch5_and_internal_clock
-SH.S_DATAIN5DFSDM1.ConfNb=1
+SH.S_DATAIN5DFSDM1.1=DFSDM1_DATIN5,PDM_SPI_Input_from_ch45_and_Internal_Clock
+SH.S_DATAIN5DFSDM1.ConfNb=2
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=27.5 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI2.CalculateBaudRate=27.5 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
