change reorder of microphone

--- a/webSocket.ioc
+++ b/webSocket.ioc
@@ -24,7 +24,7 @@ DFSDM1.Fosr_FIL0=125
 DFSDM1.Fosr_FIL1=125
 DFSDM1.Fosr_FIL2=125
 DFSDM1.Fosr_FIL3=125
-DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,SincOrder_FIL0,Divider,Selection,Type_spi_CH2,Filter_regContinuousMode_FIL0,Filter_regChannel_FIL1,Trigger_reg_FIL1,Filter_regChannel_FIL2,Trigger_reg_FIL2,Filter_regChannel_FIL3,Trigger_reg_FIL3,Type_spi_CH5,FastMode_reg_FIL1,DmaMode_reg_FIL1,FastMode_reg_FIL2,DmaMode_reg_FIL2,FastMode_reg_FIL3,DmaMode_reg_FIL3,SincOrder_FIL1,Fosr_FIL1,SincOrder_FIL2,Fosr_FIL2,SincOrder_FIL3,Fosr_FIL3,FilterOrder_CH5,RightBitShift_CH2,RightBitShift_CH3,RightBitShift_CH4,RightBitShift_CH5
+DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,SincOrder_FIL0,Divider,Selection,Type_spi_CH2,Filter_regContinuousMode_FIL0,Filter_regChannel_FIL1,Trigger_reg_FIL1,Filter_regChannel_FIL2,Trigger_reg_FIL2,Filter_regChannel_FIL3,Trigger_reg_FIL3,Type_spi_CH5,FastMode_reg_FIL1,DmaMode_reg_FIL1,FastMode_reg_FIL2,DmaMode_reg_FIL2,FastMode_reg_FIL3,DmaMode_reg_FIL3,SincOrder_FIL1,Fosr_FIL1,SincOrder_FIL2,Fosr_FIL2,SincOrder_FIL3,Fosr_FIL3,FilterOrder_CH5,RightBitShift_CH2,RightBitShift_CH3,RightBitShift_CH4,RightBitShift_CH5,Type_spi_CH3
 DFSDM1.RightBitShift_CH2=0x02
 DFSDM1.RightBitShift_CH3=0x02
 DFSDM1.RightBitShift_CH4=0x02
@@ -37,7 +37,8 @@ DFSDM1.SincOrder_FIL3=DFSDM_FILTER_SINC3_ORDER
 DFSDM1.Trigger_reg_FIL1=DFSDM_FILTER_SYNC_TRIGGER
 DFSDM1.Trigger_reg_FIL2=DFSDM_FILTER_SYNC_TRIGGER
 DFSDM1.Trigger_reg_FIL3=DFSDM_FILTER_SYNC_TRIGGER
-DFSDM1.Type_spi_CH2=DFSDM_CHANNEL_SPI_FALLING
+DFSDM1.Type_spi_CH2=DFSDM_CHANNEL_SPI_RISING
+DFSDM1.Type_spi_CH3=DFSDM_CHANNEL_SPI_FALLING
 DFSDM1.Type_spi_CH5=DFSDM_CHANNEL_SPI_FALLING
 Dma.DFSDM1_FLT0.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.DFSDM1_FLT0.0.EventEnable=DISABLE
